A lot of simplifications and a pretty imprtant optimisation. Having whether a move was a check or not in the move type is a massive bonus and has greatly simplified Eubos.